- adding java 24 support i guess - testing removing the deprecated warning we get now - no paper build still, so switching to spigot for testing -